--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,31 @@ header, footer {
     background-color: #000;
     color: #DEC9E9;
 }
+
+.wrapper {
+    max-width: 940px;
+    margin: 0 auto;
+    padding: 2em;
+}
+
+ul, ol {
+    padding: 0;
+    list-style: none;
+}
+
+header nav a {
+    color: #DEC9E9;
+    text-decoration: none;
+}
+
+#intro + section {
+    background-color: #000;
+    color: #DEC9E9;
+}
+
+article > img {
+    width: 150px;
+    border-radius: 50%;
+    filter: grayscale(100%);
+    margin-top: 1em;
+}
