--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,11 @@ article > img {
     filter: grayscale(100%);
     margin-top: 1em;
 }
+
+li:nth-child(even) {
+    color: #dc33dc;
+}
+
+main > img {
+    width: 100%;
+}
